@@ -559,6 +559,9 @@ Release 2.7.2 - UNRELEASED
     YARN-4127. RM fail with noAuth error if switched from failover mode to non-failover
     mode. (Varun Saxena via jianhe)
 
+    YARN-2890. MiniYarnCluster should turn on timeline service if configured to
+    do so. Contributed by Mit Desai.
+
 Release 2.7.1 - 2015-07-06
 
   INCOMPATIBLE CHANGES
